--- a/challenge_4/package.json
+++ b/challenge_4/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.1",
+    "live-server": "^1.2.1",
     "nodemon": "^2.0.2",
     "path": "^0.12.7",
     "react": "^16.13.0",
